Fix stack items alignment on mobile

--- a/src/scss/components/_current-stack.scss
+++ b/src/scss/components/_current-stack.scss
@@ -15,6 +15,7 @@
     }
 
     &__item {
-        align-self: center;       
+        align-self: center;    
+        justify-self: center;   
     }
 }
